# InPost-GeoAnalysis

./: .gitignore  README.md  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/analytics/cities/bydgoszcz/: hex_metrics_res9_full.parquet  ml_recommendations.parquet
data/analytics/cities/gdansk/: hex_metrics_res9_full.parquet  ml_recommendations.parquet
data/analytics/cities/gorzow_wielkopolski/: hex_metrics_res9_full.parquet  ml_recommendations.parquet
data/raw/inpost/: bydgoszcz_2026-05-06.parquet  gdansk_2026-05-02.parquet  gorzow_wielkopolski_2026-05-06.parquet  katowice_2026-05-06.parquet  krakow_2026-04-29.parquet  lodz_2026-05-06.parquet  poznan_2026-05-02.parquet  warszawa_2026-05-02.parquet  wieliczka_2026-05-06.parquet  wroclaw_2026-05-02.parquet  zielona_gora_2026-05-06.parquet
src/paczkomatoza/: config.py  pipeline.py
src/paczkomatoza/analysis/: coverage.py  distances.py  scoring.py
src/paczkomatoza/geo/: boundaries.py  hex_grid.py  spatial_ops.py  utils.py
src/paczkomatoza/ingest/: exceptions.py  geostat_client.py  inpost_client.py  models.py  osm_client.py  utils.py
src/paczkomatoza/io/: meta.py  parquet_io.py  paths.py
src/paczkomatoza/ml/: recommendations.py
src/paczkomatoza/transform/: machines.py  metrics.py  poi.py  utils.py
src/paczkomatoza/viz/: color_scales.py  folium_maps.py  pydeck_maps.py
streamlit_app/: app.py
streamlit_app/components/: city_selector.py  map_renderer.py
streamlit_app/pages/: 1_Mapa_miasta.py  2_Statystyki.py  3_Biale_plamy.py
(+16 files in other folders)
